Definindo a listagem das fotos pro componente photo-list/ Add Common module on photo module/ add new folder to services of photos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-photo
-*ngFor="let photo of photos"
-  [url]='photo.url'
-    [description]= 'photos.description'>
-</app-photo>
+<app-photo-list></app-photo-list>
