Adicionando segmento de rotas/ correção de importação do ActivatedRoute

--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,5 +1,8 @@
-<app-photo
-*ngFor="let photo of photos"
-  [url]='photo.url'
-    [description]= "'photos.description'">
-</app-photo>
+<ol class="list-unstyled row">
+  <li *ngFor='let photo of photos' class="col-4">
+    <app-photo
+        [url]='photo.url'
+        [description]="'photos.description'">
+    </app-photo>
+  </li>
+</ol>
