Adicionando a inteface OnChanges

--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -1,8 +1,10 @@
-<ol class="list-unstyled row">
-  <li *ngFor='let photo of photos' class="col-4">
-    <app-photo
-        [url]='photo.url'
-        [description]="'photos.description'">
-    </app-photo>
+<ol class="list-unstyled">
+  <li *ngFor='let cols of rows' class="row" >
+    <div *ngFor='let photo of photos' class="col-4">
+      <app-photo
+          [url]='photo.url'
+          [description]="'photos.description'">
+      </app-photo>
+    </div>
   </li>
 </ol>
