--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,1 +1,13 @@
+
+<div class="text-center mt-3 mb-3">
+  <form>
+      <input
+          class="rounded"
+          type="search"
+          placeholder="search..."
+          autofocus
+          (keyup) = "nome = $event.target.value">
+  </form>
+</div>
+{{ nome | json }}
 <app-photos [photos]="photos" ></app-photos>
