--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -1,3 +1,7 @@
+<p class="text-center text-muted" *ngIf="!photos.length">
+  Sorry, no photos
+</p>
+
 <ol class="list-unstyled">
   <li *ngFor='let cols of rows' class="row" >
     <div *ngFor='let photo of photos' class="col-4">
